# ai-coding-harness

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt  requirements.txt
.codex/: config.toml
.codex/agents/: explorer.toml  implementer.toml  planner.toml  reviewer.toml
.codex/hooks/: README.md
.github/workflows/: ci.yml
docs/: INDEX.md  project-overview.md
docs/xmind/: ai-coding-harness.xmind
harness/: __init__.py  cli.py  readiness.py
harness/adapters/: claude-code.md  codex.md  generic-cli-agent.md
harness/core/: delegation.md  evidence.md  lifecycle.md  memory.md  run-lifecycle-sop.md  safety.md  state-authority.md  task-triage.md  verification.md
harness/memory/: context.md  decisions.md  progress.md  risks.md
harness/schemas/: agent-result.schema.json  aggregation.schema.json  claim-owner.schema.json  cross-run-queue-entry.schema.json  cross-run-queue-event.schema.json  job-recovery.schema.json  job.schema.json  review-decision.schema.json  state.schema.json
harness/templates/: agent-brief.md  agent-result.md  external-review-template.json  handoff.md  plan.md  risk-acceptance.md  task.md  triage.md  verification.md
mcp/claude-review/: README.md  adapter.py  requirements.lock.txt  (+1 more)
scripts/: gen_xmind.py
tests/: test_async_job_artifacts.py  test_claude_review_adapter.py  test_cross_run_queue.py  test_generic_agent_adapter.py  test_harness_cli.py  test_phase2_readiness.py  test_phase3_closure.py  test_phase3_review_decision.py  test_state_schema.py  test_static_contracts.py
(+259 files in other folders)
