[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-harness"
version = "0.2.0"
description = "Codex-first multi-agent coding harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.26,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
harness = ["schemas/*.json", "templates/*.md"]
